# zs-apc-spdu-ctl

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.nix  Cargo.toml  LICENSE  README.md  build.rs  config.h.in  flake.nix  zs_snmp_support.c
cmake/: FindNetSNMP.cmake
docs/: CONFIG  LICENSE_HEADER  TODO  VERSIONLOG  ZSManifest  name
docs/SNMP/: OIDs  parse_stat  sw_st
docs/funcs/: status  track
docs/ground/documents/: apc-device.odg  apc-server-old.odg  apc-server.odg
docs/ground/etc/: apc-device-ctl.conf  apc-server-ctl.conf
docs/ground/usr/share/apc-device-ctl/: overview.toml
docs/ground/usr/share/apc-server-ctl/: overview.toml
src/: CMakeLists.txt  args.cxx  args.hpp  args.rs  conf.cxx  conf.hpp  confent.cxx  confent_outlets.cxx  main.cxx  main.rs  snmp.rs  string_view.hpp
src/conf/: host.rs  mod.rs  outlets.rs  parse.rs
src/snmp/: parse.cxx  zs_snmp.cxx  zs_snmp.hpp
